--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,11 @@ markdown2
 beautifulsoup4
 opencv-python
 opencv-contrib-python
+
+comtypes==1.2.0
+pycaw==20230407
+screen-brightness-control==0.22.1
+pillow==10.1.0
+nltk==3.8.1
+requests==2.31.0
+psutil==5.9.8
